Fixed use of deprecated Class$newInstance() in favour of Class$getDeclaratedConstructor()$newInstance()